# fastapi-nuxtjs

./: docker-compose.yml
admin/: .env  .env.development  LICENSE  package.json
backend/backendapp/: .gitgnore  backend.dockerfile  pyproject.toml
backend/backendapp/app/: alembic.ini  main.py
backend/backendapp/app/alembic/: env.py
backend/backendapp/app/alembic/versions/: 0336f293591c_add_product_model_fields.py  0b651ca7ca0b_add_product.py  239705dbd98b_add_foreignkey_user.py  33edfde91c4f_refactor_product.py  466d591b81d0_init_data.py  64d6ec06a2ba_refactor_product_foreignkey_name.py  9aa805072592_init_data.py  9c293e840e97_init_data.py  d1e79c26a2f1_change_product_color_field.py  dacb084be73c_add_product.py  f6936e20206e_init_commit_two.py
backend/backendapp/app/app/api/: deps.py
backend/backendapp/app/app/api/api_v1/: api.py
backend/backendapp/app/app/api/api_v1/endpoints/: departments.py  login.py  products.py  users.py
backend/backendapp/app/app/core/: config.py  security.py
backend/backendapp/app/app/crud/: __init__.py  crud_department.py  crud_product.py  crud_user.py
backend/backendapp/app/app/db/: base.py  base_class.py  session.py
backend/backendapp/app/app/models/: __init__.py  model_product.py  user.py
backend/backendapp/app/app/schemas/: __init__.py  schemas_product.py  schemas_user.py  user.py
backend/backendapp/app/sql/: crud.py  database.py  models.py  schemas.py
backend/backendapp/tests/: test_app.py
backendadmin/: README.md  package-lock.json  package.json
backstage/: package.json
frontend/: package-lock.json  (+1 more)
(+17 files in other folders)
