[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["hanson190505 <413506012@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.62.0"
uvicorn = "^0.13.0"
SQLAlchemy = "^1.3.20"
PyMySQL = "^0.10.1"


[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
