[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["hanson190505 <413506012@qq.com>"]

#poetry install 使用国内源头
[[tool.poetry.source]]
name = "douban"
default = true
url = "https://pypi.doubanio.com/simple/"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.62.0"
uvicorn = "^0.13.0"
SQLAlchemy = "^1.3.20"
psycopg2-binary = "^2.8.6"
passlib = "^1.7.4"
#docker中安装python-jose包出问题,该用slim版本解决
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
python-multipart = "^0.0.5"
alembic = "^1.4.3"


[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
